deps/v8/test/message/fail/weak-refs-unregister.out
*%(basename)s:*: TypeError: Invalid unregisterToken ('1')
fg.unregister(1);
   ^
TypeError: Invalid unregisterToken ('1')
    at FinalizationRegistry.unregister (<anonymous>)
    at *%(basename)s:*:4
